Fix bugs platine gestion (#215)
* fix: add year collect

* fix: add last event quesitoningEventId